[package]
name = "routem"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Remesh/routem"
repository = "https://github.com/Remesh/routem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
once_cell = "1.19.0"
thiserror = "1.0.51"
uuid = "1.6.1"
